basic machine learning capable

--- a/games_ml.ipynb
+++ b/games_ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "4       Mark Cuban   Donnie Nelson  Rick Carlisle      Texas Legends  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "4        0.474        0.818         0.414      16.0      29.0               1  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,15 +614,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Home Team Abbreviation: WAS\n",
-      "Enter Visitor Team Abbreviation: POR\n"
+      "Enter Home Team Abbreviation: PHX\n",
+      "Enter Visitor Team Abbreviation: NYK\n"
      ]
     }
    ],
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,14 +673,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(16, 12) (16,)\n"
+      "(15, 12) (15,)\n"
      ]
     }
    ],
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,31 +717,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 Score: 0.9747019082832656\n"
+      "R2 Score: 0.8303525740627433\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prediction</th>\n",
+       "      <th>Actual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.780869</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.147221</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.178748</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.812560</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([ 0.06208262, -2.27396357, -1.18106776,  0.8996881 , -0.07910665,\n",
-       "       -0.04485951, -0.05339939, -2.19008077, -1.14188461, -1.19137254,\n",
-       "        0.00711807,  0.02488476])"
+       "   Prediction  Actual\n",
+       "0    0.780869       1\n",
+       "1    1.147221       1\n",
+       "2    0.178748       0\n",
+       "3    0.812560       1"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
     "model = LinearRegression()\n",
     "\n",
     "# Fitting our model with all of our features in X\n",
@@ -749,12 +798,141 @@
     "\n",
     "score = model.score(X, y)\n",
     "print(f\"R2 Score: {score}\")\n",
-    "model.coef_"
+    "predict = pd.DataFrame({\"Prediction\": model.predict(X_test), \"Actual\": y_test}).reset_index(drop=True)\n",
+    "contribution = pd.DataFrame({\"Parameter\": list(X.columns), \"Weight\": model.coef_ }).reset_index(drop=True)\n",
+    "predict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Parameter</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FG_PCT_home</td>\n",
+       "      <td>8.358484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>FT_PCT_away</td>\n",
+       "      <td>2.092114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FG3_PCT_home</td>\n",
+       "      <td>0.842893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>FG3_PCT_away</td>\n",
+       "      <td>0.627178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>REB_home</td>\n",
+       "      <td>0.023222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>REB_away</td>\n",
+       "      <td>0.010921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PTS_away</td>\n",
+       "      <td>0.002685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PTS_home</td>\n",
+       "      <td>-0.017775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AST_home</td>\n",
+       "      <td>-0.056405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>AST_away</td>\n",
+       "      <td>-0.065656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FT_PCT_home</td>\n",
+       "      <td>-1.541662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>FG_PCT_away</td>\n",
+       "      <td>-5.299580</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Parameter    Weight\n",
+       "1    FG_PCT_home  8.358484\n",
+       "8    FT_PCT_away  2.092114\n",
+       "3   FG3_PCT_home  0.842893\n",
+       "9   FG3_PCT_away  0.627178\n",
+       "5       REB_home  0.023222\n",
+       "11      REB_away  0.010921\n",
+       "6       PTS_away  0.002685\n",
+       "0       PTS_home -0.017775\n",
+       "4       AST_home -0.056405\n",
+       "10      AST_away -0.065656\n",
+       "2    FT_PCT_home -1.541662\n",
+       "7    FG_PCT_away -5.299580"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contribution.sort_values(by='Weight', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SciKitLearn - Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +945,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +979,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -877,8 +1055,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -889,10 +1067,10 @@
        "0           1       1\n",
        "1           1       1\n",
        "2           0       0\n",
-       "3           0       0"
+       "3           1       1"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
