ron's experiment uploaded

--- a/Backend/games_ml.ipynb
+++ b/Backend/games_ml.ipynb
@@ -3,19 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from datetime import datetime, date\n",
-    "import os"
+    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Read in Games and Game Details datasets"
    ]
@@ -23,7 +32,11 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -190,7 +203,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Merge game dataframes, drop rows with NAN values in OREB, PLUS_MINUS columns"
    ]
@@ -198,7 +214,11 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "games_df = pd.merge(games, game_details, on='GAME_ID', how='inner') \n",
@@ -214,7 +234,11 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -425,7 +449,11 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -615,7 +643,11 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -643,7 +675,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Drop Rows to only teams and earlier dates specified"
    ]
@@ -651,7 +686,11 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "#games = games[games['GAME_DATE_EST'] <=game_date]\n",
@@ -666,7 +705,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Assign X and y data frames"
    ]
@@ -674,7 +716,11 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -692,7 +738,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Use SciKitLearn to Split into Train / Test datasets "
    ]
@@ -700,17 +749,22 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## SciKitLearn - Linear Regression"
    ]
@@ -718,7 +772,11 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -806,7 +864,11 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -925,7 +987,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## SciKitLearn - Logistic Regression"
    ]
@@ -933,7 +998,11 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -959,7 +1028,11 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -991,7 +1064,11 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1010,7 +1087,11 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -1083,7 +1164,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1104,7 +1189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
