--- a/ron-experiment/old stuff/games_predict.ipynb
+++ b/ron-experiment/old stuff/games_predict.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -15,8 +17,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import ElasticNet\n",
     "from sklearn.linear_model import Lasso\n",
-    "from sklearn.linear_model import Ridge\n",
-    "from sklearn.ensemble import RandomForestClassifier\n"
+    "from sklearn.linear_model import Ridge"
    ]
   },
   {
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -55,8 +56,7 @@
        "      <th>Visitor</th>\n",
        "      <th>Home</th>\n",
        "      <th>R-Coefficient</th>\n",
-       "      <th>Home_Score</th>\n",
-       "      <th>Visitor_Score</th>\n",
+       "      <th>Spread Predict</th>\n",
        "      <th>Prediction</th>\n",
        "      <th>Winner</th>\n",
        "      <th>Logic</th>\n",
@@ -70,7 +70,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>ATL</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -78,7 +77,6 @@
        "      <th>1</th>\n",
        "      <td>MIL</td>\n",
        "      <td>CHI</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -90,16 +88,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Visitor Home  R-Coefficient  Home_Score  Visitor_Score  Prediction Winner  \\\n",
-       "0     ATL  ORL            NaN         NaN            NaN         NaN    ATL   \n",
-       "1     MIL  CHI            NaN         NaN            NaN         NaN    MIL   \n",
-       "\n",
-       "   Logic  \n",
-       "0    NaN  \n",
-       "1    NaN  "
+       "  Visitor Home  R-Coefficient  Spread Predict  Prediction Winner  Logic\n",
+       "0     ATL  ORL            NaN             NaN         NaN    ATL    NaN\n",
+       "1     MIL  CHI            NaN             NaN         NaN    MIL    NaN"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -222,117 +216,28 @@
        "1        0.720         0.429      25.0      44.0               0  "
       ]
      },
-     "execution_count": 192,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "games.drop(['TEAM_ID_home','TEAM_ID_away', 'GAME_STATUS_TEXT', 'GAME_DATE_EST'], axis=1, inplace=True)\n",
-    "games.drop_duplicates()\n",
     "games.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 109,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5564612731303595 0.5813953488372093\n",
-      "0.6892064181305717 0.6739130434782609\n",
-      "0.46827121949021155 0.875\n",
-      "0.735984433466782 0.35135135135135137\n",
-      "0.688869274766434 0.9333333333333333\n",
-      "0.7200753065578502 0.5405405405405406\n",
-      "0.6379742202198482 0.3\n",
-      "0.7067982564774951 0.43243243243243246\n",
-      "0.7039681339121305 0.6774193548387096\n",
-      "0.6089330672051907 0.5121951219512195\n",
-      "0.7702163085492096 0.6896551724137931\n",
-      "0.6061087537756662 0.55\n",
-      "0.6051810709660849 0.8648648648648649\n",
-      "0.6569581358904673 0.59375\n",
-      "0.6532933847070904 0.6428571428571429\n",
-      "0.6179915725991282 0.25\n",
-      "0.7127687604378442 0.6136363636363636\n",
-      "0.49181709995739226 0.8620689655172413\n",
-      "0.6447687470008318 0.6875\n",
-      "0.6740979927033437 0.2903225806451613\n",
-      "0.4531628150185075 0.7727272727272727\n",
-      "0.6367949971040734 0.4375\n",
-      "0.7453232171067576 0.4444444444444444\n",
-      "0.742781922775201 0.6842105263157895\n",
-      "0.7321757199968927 0.6875\n",
-      "0.5972458517267629 0.6875\n",
-      "0.6452018321496189 0.55\n",
-      "0.5966844563171962 0.7368421052631579\n",
-      "0.68742191492205 0.7333333333333333\n",
-      "0.838910004767177 0.5625\n",
-      "0.7275172802151427 0.5625\n",
-      "0.7599846221622355 0.7741935483870968\n",
-      "0.5975557259355904 0.6666666666666666\n",
-      "0.74810025860637 0.5333333333333333\n",
-      "0.6908116143259242 0.6111111111111112\n",
-      "0.6839058348979025 0.6756756756756757\n",
-      "0.6736509658484859 0.5128205128205128\n",
-      "0.7198527854770094 0.5625\n",
-      "0.6013140200814003 0.25\n",
-      "0.6114727265109613 0.375\n",
-      "0.6133933477020588 0.6774193548387096\n",
-      "0.5975557259355904 0.6666666666666666\n",
-      "0.74810025860637 0.5333333333333333\n",
-      "0.6736509658484859 0.5128205128205128\n",
-      "0.7198527854770094 0.625\n",
-      "0.6013140200814003 0.25\n",
-      "0.49319637676736816 0.8\n",
-      "0.7176824375190176 0.7333333333333333\n",
-      "0.6908116143259242 0.6111111111111112\n",
-      "0.6839058348979025 0.6756756756756757\n",
-      "0.7493585214862413 0.8333333333333334\n",
-      "0.6133933477020588 0.6451612903225806\n",
-      "0.54128054761916 0.9333333333333333\n",
-      "0.6234317331938252 0.6666666666666666\n",
-      "0.7596012442853464 0.7647058823529411\n",
-      "0.8223784202705873 0.4\n",
-      "0.67626142396252 0.6875\n",
-      "0.577605339755485 0.7241379310344828\n",
-      "0.6478903832579351 0.7333333333333333\n",
-      "0.7018138115056426 0.7894736842105263\n",
-      "0.6908847938158753 0.47368421052631576\n",
-      "0.7055819527208143 0.17647058823529413\n",
-      "0.7139251253505343 0.36666666666666664\n",
-      "0.49319637676736816 0.8\n",
-      "0.30193670782660287 0.868421052631579\n",
-      "0.7032040700346532 0.6521739130434783\n",
-      "0.6718347798650219 0.375\n",
-      "0.606874399588917 0.6052631578947368\n",
-      "0.6765047630121689 0.3888888888888889\n",
-      "0.61630373417108 0.8125\n",
-      "0.6787110031241478 0.6875\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spread_predict = []\n",
     "record_predict = []\n",
     "score_predict = []\n",
     "winner_predict = []\n",
-    "hscore = []\n",
-    "vscore = []\n",
-    "rf_predictor = []\n",
     "\n",
     "for x in range(len(matchups)):\n",
     "      \n",
@@ -347,38 +252,32 @@
     "        if teams.iloc[i]['ABBREVIATION'] == visitor:\n",
     "            visitor_id = teams.iloc[i]['TEAM_ID']\n",
     "\n",
-    "#Narrow games to matched home, visitor teams, create a mirror dataset reversing home / away teams (added data)\n",
-    "    \n",
+    "#Narrow games to matched home, visitor teams\n",
     "    game = game[game['HOME_TEAM_ID'] == home_id]\n",
     "    game = game[game['VISITOR_TEAM_ID'] == visitor_id]\n",
-    "    \n",
+    " \n",
     "    \n",
     "#Drop dates, team_ids, game_ids, season - will not be useful\n",
     "    game.drop(['GAME_ID','HOME_TEAM_ID', \n",
     "            'VISITOR_TEAM_ID', 'SEASON'], axis=1)\n",
     "    game.dropna(inplace=True)\n",
-    "\n",
-    "\n",
+    "    \n",
     "#Split Dataset for training, test\n",
     "    X = game.drop(\"HOME_TEAM_WINS\", axis=1)\n",
     "    y = game[\"HOME_TEAM_WINS\"]\n",
+    " \n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)\n",
     "\n",
     "#Linear Regression \n",
     "    model = ElasticNet()\n",
     "\n",
-    "#Random Forest\n",
-    "    rf = RandomForestClassifier(n_estimators=200)\n",
-    "    rf = rf.fit(X_train, y_train)\n",
-    "    r = rf.predict(X).mean()\n",
-    "    rf_predictor.append(r)\n",
-    "    \n",
     "# Fitting our model with all of our features in X\n",
     "    model.fit(X, y)\n",
-    "    \n",
+    "\n",
     "    score = model.score(X, y)\n",
     "    predict = pd.DataFrame({\"Prediction\": model.predict(X_test), \"Actual\": y_test}).reset_index(drop=True)\n",
     "    contribution = pd.DataFrame({\"Parameter\": list(X.columns), \"Weight\": model.coef_ }).reset_index(drop=True)\n",
+    "\n",
     "    \n",
     "# Calculate Predicted Win%\n",
     "    wins = 0\n",
@@ -394,9 +293,7 @@
     "# Write to DataFrame\n",
     "    spread_predict.append(spread)\n",
     "    record_predict.append(record)\n",
-    "    score_predict.append(score)\n",
-    "    hscore.append(home_score)\n",
-    "    vscore.append(visitor_score)"
+    "    score_predict.append(score)"
    ]
   },
   {
@@ -408,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 110,
    "metadata": {
     "scrolled": true
    },
@@ -417,142 +314,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5633802816901409\n"
+      "0.5789473684210527\n"
      ]
     }
    ],
    "source": [
-    "matchups['Home_Score'] = hscore\n",
-    "matchups['Visitor_Score'] = vscore\n",
-    "matchups['R-Coefficient'] = score_predict\n",
-    "matchups['Historical Home Win Record'] = record_predict\n",
-    "\n",
-    "holder = []\n",
-    "logic = []\n",
-    "\n",
-    "for i in range (len(matchups)):\n",
-    "    if matchups.iloc[i]['Historical Home Win Record'] > 0.5:\n",
-    "        holder.append(matchups.iloc[i]['Visitor'])\n",
-    "    else:\n",
-    "        holder.append(matchups.iloc[i]['Home'])\n",
-    "            \n",
-    "#Calculate Logic - 1 if correct, 0 if incorrect\n",
-    "    if holder[i] == matchups.iloc[i]['Winner']:\n",
-    "        logic.append(1)\n",
-    "    else:\n",
-    "        logic.append(0)\n",
-    "\n",
-    "matchups['Prediction'] = holder\n",
-    "matchups['Logic'] = logic\n",
-    "matchups.to_csv('matchup_output_early.csv')\n",
-    "#matchups prediction accuracy\n",
-    "print((sum(logic) / len(logic)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mirror Modeling (Home / Visitor Teams reversed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spread_predict = []\n",
-    "record_predict = []\n",
-    "score_predict = []\n",
-    "winner_predict = []\n",
-    "hscore = []\n",
-    "vscore = []\n",
-    "\n",
-    "for x in range(len(matchups)):\n",
-    "      \n",
-    "    home = matchups.iloc[x]['Home']\n",
-    "    visitor = matchups.iloc[x]['Visitor']\n",
-    "    game = games\n",
-    "\n",
-    "    for i in range(len(teams)):\n",
-    "        if teams.iloc[i]['ABBREVIATION'] == home:\n",
-    "            home_id = teams.iloc[i]['TEAM_ID']\n",
-    "\n",
-    "        if teams.iloc[i]['ABBREVIATION'] == visitor:\n",
-    "            visitor_id = teams.iloc[i]['TEAM_ID']\n",
-    "\n",
-    "#Narrow games to matched home, visitor teams, create a mirror dataset reversing home / away teams (added data)\n",
-    "    \n",
-    "    game = game[game['HOME_TEAM_ID'] == visitor_id]\n",
-    "    game = game[game['VISITOR_TEAM_ID'] == home_id]\n",
-    "    \n",
-    "    \n",
-    "#Drop dates, team_ids, game_ids, season - will not be useful\n",
-    "    game.drop(['GAME_ID','HOME_TEAM_ID', \n",
-    "            'VISITOR_TEAM_ID', 'SEASON'], axis=1)\n",
-    "    game.dropna(inplace=True)\n",
-    "\n",
-    "\n",
-    "#Split Dataset for training, test\n",
-    "    X = game.drop(\"HOME_TEAM_WINS\", axis=1)\n",
-    "    y = game[\"HOME_TEAM_WINS\"]\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)\n",
-    "\n",
-    "#Linear Regression \n",
-    "    model = ElasticNet()\n",
-    "    model_mirror = ElasticNet()\n",
-    "    \n",
-    "# Fitting our model with all of our features in X\n",
-    "    model.fit(X, y)\n",
-    "    \n",
-    "    score = model.score(X, y)\n",
-    "    predict = pd.DataFrame({\"Prediction\": model.predict(X_test), \"Actual\": y_test}).reset_index(drop=True)\n",
-    "    contribution = pd.DataFrame({\"Parameter\": list(X.columns), \"Weight\": model.coef_ }).reset_index(drop=True)\n",
-    "\n",
-    "    \n",
-    "# Calculate Predicted Win%\n",
-    "    wins = 0\n",
-    "    for j in range(len(predict)):\n",
-    "        wins = wins + round(predict.iloc[j]['Prediction'])\n",
-    "    record = wins / len(predict)\n",
-    "\n",
-    "# Calculate Spread\n",
-    "    home_score = game['PTS_home'].mean()\n",
-    "    visitor_score = game['PTS_away'].mean()\n",
-    "    spread = home_score - visitor_score\n",
-    "\n",
-    "# Write to DataFrame\n",
-    "    spread_predict.append(spread)\n",
-    "    record_predict.append(record)\n",
-    "    score_predict.append(score)\n",
-    "    hscore.append(home_score)\n",
-    "    vscore.append(visitor_score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mirror Populate matchups dataframe, write to CSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5492957746478874\n"
-     ]
-    }
-   ],
-   "source": [
-    "matchups['Home_Score'] = hscore\n",
-    "matchups['Visitor_Score'] = vscore\n",
+    "matchups['Spread Predict'] = spread_predict\n",
     "matchups['R-Coefficient'] = score_predict\n",
     "matchups['Historical Home Win Record'] = record_predict\n",
     "\n",
@@ -572,10 +339,19 @@
     "\n",
     "matchups['Prediction'] = holder\n",
     "matchups['Logic'] = logic\n",
-    "matchups.to_csv('matchup_output_early_mirror.csv')\n",
+    "matchups.to_csv('matchup_output_early.csv')\n",
     "#matchups prediction accuracy\n",
     "print(sum(logic) / len(logic))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -594,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
