Ron Thursday Coding

--- a/ron-experiment/games_predict_rf.ipynb
+++ b/ron-experiment/games_predict_rf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -93,13 +93,13 @@
        "1    NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "game = pd.read_csv('games.csv')\n",
+    "games = pd.read_csv('games.csv')\n",
     "teams = pd.read_csv('teams.csv')\n",
     "matchups = pd.read_csv('matchups_early.csv')\n",
     "matchups.reset_index(drop=True).head(2)"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -216,52 +216,38 @@
        "1        0.720         0.429      25.0      44.0               0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "game.drop(['TEAM_ID_home','TEAM_ID_away', 'GAME_STATUS_TEXT', 'GAME_DATE_EST'], axis=1, inplace=True)\n",
-    "game.drop_duplicates()\n",
-    "game.head(2)"
+    "games.drop(['TEAM_ID_home','TEAM_ID_away', 'GAME_STATUS_TEXT', 'GAME_DATE_EST'], axis=1, inplace=True)\n",
+    "games.drop_duplicates()\n",
+    "games.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "With n_samples=0, test_size=0.25 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-3c807510fd63>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"HOME_TEAM_WINS\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"HOME_TEAM_WINS\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m     \u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstratify\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;31m#Calculate Historical Win%\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py\u001b[0m in \u001b[0;36mtrain_test_split\u001b[1;34m(*arrays, **options)\u001b[0m\n\u001b[0;32m   2098\u001b[0m     \u001b[0mn_samples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_num_samples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2099\u001b[0m     n_train, n_test = _validate_shuffle_split(n_samples, test_size, train_size,\n\u001b[1;32m-> 2100\u001b[1;33m                                               default_test_size=0.25)\n\u001b[0m\u001b[0;32m   2101\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2102\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mshuffle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py\u001b[0m in \u001b[0;36m_validate_shuffle_split\u001b[1;34m(n_samples, test_size, train_size, default_test_size)\u001b[0m\n\u001b[0;32m   1780\u001b[0m             \u001b[1;34m'resulting train set will be empty. Adjust any of the '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1781\u001b[0m             'aforementioned parameters.'.format(n_samples, test_size,\n\u001b[1;32m-> 1782\u001b[1;33m                                                 train_size)\n\u001b[0m\u001b[0;32m   1783\u001b[0m         )\n\u001b[0;32m   1784\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: With n_samples=0, test_size=0.25 and train_size=None, the resulting train set will be empty. Adjust any of the aforementioned parameters."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spread_predict = []\n",
     "record_predict = []\n",
     "score_predict = []\n",
-    "winner_predict = []\n",
     "hscore = []\n",
     "vscore = []\n",
     "rf_predictor = []\n",
     "predictor = []\n",
     "\n",
     "for x in range(len(matchups)):\n",
-    "     \n",
+    "      \n",
     "    home = matchups.iloc[x]['Home']\n",
     "    visitor = matchups.iloc[x]['Visitor']\n",
+    "    game = games\n",
     "\n",
     "    for i in range(len(teams)):\n",
     "        if teams.iloc[i]['ABBREVIATION'] == home:\n",
@@ -291,7 +277,7 @@
     "    record = wins / len(y)    \n",
     "\n",
     "#Random Forest Classification\n",
-    "    rf = RandomForestClassifier(n_estimators=200)\n",
+    "    rf = RandomForestClassifier(n_estimators=64)\n",
     "    rf = rf.fit(X_train, y_train)\n",
     "    \n",
     "# Fitting our model with all of our features in X\n",
@@ -308,29 +294,30 @@
     "    record_predict.append(record)\n",
     "    score_predict.append(score)\n",
     "    hscore.append(home_score)\n",
-    "    vscore.append(visitor_score)"
+    "    vscore.append(visitor_score)\n",
+    "    \n",
+    "#Write lists to dataframe columns\n",
+    "matchups['Home_Score'] = hscore\n",
+    "matchups['Visitor_Score'] = vscore\n",
+    "matchups['R-Coefficient'] = score_predict\n",
+    "matchups['Historical Home Win Record'] = record_predict"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Populate matchups dataframe, write to CSV"
+    "## Predict Winner1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "matchups['Home_Score'] = hscore\n",
-    "matchups['Visitor_Score'] = vscore\n",
-    "matchups['R-Coefficient'] = score_predict\n",
-    "matchups['Historical Home Win Record'] = record_predict\n",
-    "\n",
     "win_predictor = []\n",
     "win_logic = []\n",
     "\n",
@@ -340,26 +327,147 @@
     "    else:\n",
     "        win_predictor.append(matchups.iloc[i]['Visitor'])\n",
     "            \n",
-    "#Calculate Logic - 1 if correct, 0 if incorrect\n",
-    "    if win_predictor[i] == matchups.iloc[i]['Winner']:\n",
-    "        win_logic.append(1)\n",
-    "    else:\n",
-    "        win_logic.append(0)\n",
     "\n",
     "matchups['Prediction'] = win_predictor\n",
-    "matchups['Logic'] = win_logic\n",
-    "matchups.to_csv('matchup_output_early.csv')\n",
+    "#matchups['Logic'] = win_logic\n",
+    "#matchups.to_csv('matchup_output_early.csv')\n",
     "\n",
     "#matchups prediction accuracy\n",
-    "print((sum(win_logic) / len(win_logic)), sum(score_predict)/len(score_predict))"
+    "#print((sum(win_logic) / len(win_logic)), sum(score_predict)/len(score_predict))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spread_predict2 = []\n",
+    "record_predict2 = []\n",
+    "score_predict2 = []\n",
+    "hscore2 = []\n",
+    "vscore2 = []\n",
+    "rf_predictor2 = []\n",
+    "predictor2 = []\n",
+    "\n",
+    "for x in range(len(matchups)):\n",
+    "    game2 = games\n",
+    "    home2 = matchups.iloc[x]['Home']\n",
+    "    visitor2 = matchups.iloc[x]['Visitor']\n",
+    "    \n",
+    "    for i in range(len(teams)):\n",
+    "        if teams.iloc[i]['ABBREVIATION'] == home2:\n",
+    "            home_id = teams.iloc[i]['TEAM_ID']\n",
+    "        if teams.iloc[i]['ABBREVIATION'] == visitor2:\n",
+    "            visitor_id = teams.iloc[i]['TEAM_ID']\n",
+    "            \n",
+    "#Filter games to matched home, visitor teams\n",
+    "    game2 = game2[game2['HOME_TEAM_ID'] == visitor_id]\n",
+    "    game2 = game2[game2['VISITOR_TEAM_ID'] == home_id]\n",
+    "    \n",
+    "#Drop dates, team_ids, game_ids, season - will not be useful\n",
+    "    game2.drop(['GAME_ID','HOME_TEAM_ID', \n",
+    "            'VISITOR_TEAM_ID', 'SEASON'], axis=1)\n",
+    "    game2.dropna(inplace=True)\n",
+    "    \n",
+    "#Split Dataset for training, test\n",
+    "    X2 = game2.drop(\"HOME_TEAM_WINS\", axis=1)\n",
+    "    y2 = game2[\"HOME_TEAM_WINS\"]\n",
+    "    X_train2, X_test2, y_train2, y_test2 = train_test_split(X2, y2, random_state=1, stratify=y2)\n",
+    "\n",
+    "#Calculate Historical Win%\n",
+    "    wins = 0\n",
+    "    for j in range(len(y2)):\n",
+    "        wins = wins + round(y2.iloc[j])\n",
+    "    record2 = wins / len(y2)    \n",
+    "\n",
+    "#Random Forest Classification\n",
+    "    rf2 = RandomForestClassifier(n_estimators=64)\n",
+    "    rf2 = rf2.fit(X_train2, y_train2)\n",
+    "    \n",
+    "# Fitting our model with all of our features in X\n",
+    "    score2 = rf2.score(X2, y2)\n",
+    "    predictor2.append(rf2.predict(X2).mean()- 0.5*np.var(rf2.predict(X2))/record2)\n",
+    "\n",
+    "# Calculate Spread\n",
+    "    home_score2 = game2['PTS_home'].mean()\n",
+    "    visitor_score2 = game2['PTS_away'].mean()\n",
+    "    spread2 = home_score2 - visitor_score2\n",
+    "\n",
+    "# Append Scoring Lists\n",
+    "    spread_predict2.append(spread2)\n",
+    "    record_predict2.append(record2)\n",
+    "    score_predict2.append(score2)\n",
+    "    hscore2.append(home_score2)\n",
+    "    vscore2.append(visitor_score2)\n",
+    "\n",
+    "#Populate dataframe columns with lists\n",
+    "matchups['Home_Score2'] = hscore2\n",
+    "matchups['Visitor_Score2'] = vscore2\n",
+    "matchups['R-Coefficient2'] = score_predict2\n",
+    "matchups['Historical Home Win Record2'] = record_predict2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "win_predictor2 = []\n",
+    "\n",
+    "for i in range (len(matchups)):\n",
+    "    if predictor2[i] > 0.5:\n",
+    "        win_predictor2.append(matchups.iloc[i]['Home'])\n",
+    "    else:\n",
+    "        win_predictor2.append(matchups.iloc[i]['Visitor'])\n",
+    "            \n",
+    "matchups['Prediction2'] = win_predictor2\n",
+    "\n",
+    "#matchups prediction accuracy\n",
+    "#print((sum(win_logic) / len(win_logic)), sum(score_predict)/len(score_predict))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare mirror images, confidence, spread"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5213675213675214 0.9447625707881497\n"
+     ]
+    }
+   ],
+   "source": [
+    "win_adjust = []\n",
+    "win_logic = []\n",
+    "\n",
+    "for x in range(len(matchups)):\n",
+    "    if (win_predictor[x] != win_predictor2[x]) and (score_predict2[x]>score_predict[x]):\n",
+    "        win_adjust.append(win_predictor2[x])\n",
+    "    else:\n",
+    "        win_adjust.append(win_predictor[x])\n",
+    "\n",
+    "#Calculate Logic =  1 if correct, 0 if incorrect\n",
+    "    if win_adjust[x] == matchups.iloc[x]['Winner']:\n",
+    "        win_logic.append(1)\n",
+    "    else:\n",
+    "        win_logic.append(0)\n",
+    "        \n",
+    "matchups['Logic'] = win_logic\n",
+    "matchups.to_csv('matchup_output_early.csv')\n",
+    "print((sum(win_logic) / len(win_logic)), sum(score_predict2)/len(score_predict2))"
+   ]
   }
  ],
  "metadata": {
